// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModAutor If no image must no render author image 1`] = `
<div>
  <section
    class="mod-autor"
  >
    <div
      class="container-text"
    >
      <div
        class="container-firma"
      >
        <a
          class="com-link --autor"
          href="https://lanacion.com.ar"
          title="Ir a notas de Pepe"
        >
          Pepe
        </a>
        <a
          class="com-link --autor"
          href="https://lanacion.com.ar"
          title="Ir a notas de Paco"
        >
          Paco
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`ModAutor With image render the author image with fetchPriority high and loading eager 1`] = `
<div>
  <section
    class="mod-autor"
  >
    <div
      class="container-img"
    >
      <a
        class="com-link mod-image"
        href="https://lanacion.com.ar"
        title="Ir a notas de Pepe"
      >
        <img
          alt="Ir a notas de Pepe"
          class="com-image "
          decoding="async"
          fetchpriority="high"
          loading="eager"
          src="https://resizer.glanacion.com/resizer/V5K_reWbvEbIuJAS7PQaidnMVp8=/80x0/filters:format(webp):quality(80)/s3.amazonaws.com/arc-authors/lanacionar/2281458.png"
        />
      </a>
    </div>
    <div
      class="container-text"
    >
      <div
        class="container-firma"
      >
        <a
          class="com-link --autor"
          href="https://lanacion.com.ar"
          title="Ir a notas de Pepe"
        >
          Pepe
        </a>
      </div>
    </div>
  </section>
</div>
`;
